--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="col-11 col-sm-10 col-md-9 col-lg-8 mx-auto">
                         <h2 class="my-3 text-center">POR <a href="#">FERNANDA ROZAS</a> <span>3 DE OCTUBRE, 2022</span></h2>
                         <p class="lead text-muted">
-                            Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta. La última versión americana presenta al chico grande como una masiva fuerza de destrucción generada por un computador- lejano de los humildes comienzos de un hombre vestido en traje de goma  que destruye modelos de ciudades de madera. A través de aquellas seis décadas y media, Godzilla ha sufrido abundantes transformaciones y batallado un memorable abanico de adversarios- el mejor de ellos, el que presentamos a continuación
+                            Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta. La última versión americana presenta al gran chico como una masiva fuerza de destrucción generada por un computador- lejano de los humildes comienzos de un hombre vestido en traje de goma  que destruye modelos de ciudades de madera. A través de aquellas seis décadas y media, Godzilla ha sufrido abundantes transformaciones y batallado un memorable abanico de adversarios- el mejor de ellos, el que presentamos a continuación
                         </p>
                     </div>
                 </div>
