--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Godzilla: la evolución de un Monstruo">
 <meta property="og:description" content="Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta.">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="https://github.com/fernandarozas/clase09/blob/main/svg/BE620035A3644042%20(1).jpeg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="Godzilla: la evolución de un Monstruo">
 <meta property="twitter:description" content="Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta.">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="twitter:image" content="https://github.com/fernandarozas/clase09/blob/main/svg/BE620035A3644042%20(1).jpeg">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Ingeniería Inversa</title>
