--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
     <head><!-- Primary Meta Tags -->
 <title>Godzilla: la evolución de un Monstruo</title>
 <meta name="title" content="Godzilla: la evolución de un Monstruo">
-<meta name="description" content="Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta.">
+<meta name="description" content="El monstruo radiactivo aterriza nuevamente en nuestras pantallas, sesenta y ocho años después de su estreno en Japón">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Godzilla: la evolución de un Monstruo">
-<meta property="og:description" content="Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta.">
-<meta property="og:image" content="https://github.com/fernandarozas/clase09/blob/main/svg/BE620035A3644042%20(1).jpeg">
+<meta property="og:description" content="El monstruo radiactivo aterriza nuevamente en nuestras pantallas, sesenta y ocho años después de su estreno en Japón">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="Godzilla: la evolución de un Monstruo">
-<meta property="twitter:description" content="Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta.">
-<meta property="twitter:image" content="https://github.com/fernandarozas/clase09/blob/main/svg/BE620035A3644042%20(1).jpeg">
+<meta property="twitter:description" content="El monstruo radiactivo aterriza nuevamente en nuestras pantallas, sesenta y ocho años después de su estreno en Japón">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Ingeniería Inversa</title>
@@ -104,9 +104,10 @@
                         <h1 class="text-center m-4">Godzilla: la evolución de un monstruo</h1>
                     </div>
                     <div class="col-11 col-sm-10 col-md-9 col-lg-8 mx-auto">
-                        <h2 class="my-3 text-center">POR <a href="#">FERNANDA ROZAS</a> <span>3 DE OCTUBRE, 2022</span></h2>
+                        <h2 class="my-3 text-center">POR <a href="https://github.com/fernandarozas">FERNANDA ROZAS</a> <span>3 DE OCTUBRE, 2022</span></h2>
                         <p class="lead text-muted">
-                            Sesenta y cinco años después de que Godzilla pisara nuestras pantallas en la película japonesa de 1954, el monstruo radioactivo está de vuelta. La última versión americana presenta al gran chico como una masiva fuerza de destrucción generada por un computador- lejano de los humildes comienzos de un hombre vestido en traje de goma  que destruye modelos de ciudades de madera. A través de aquellas seis décadas y media, Godzilla ha sufrido abundantes transformaciones y batallado un memorable abanico de adversarios- el mejor de ellos, el que presentamos a continuación
+                            El monstruo radiactivo aterriza nuevamente en nuestras pantallas, sesenta y ocho años después de su estreno en Japón. Esta última versión americana presenta a Godzilla como una descomunal fuerza de destrucción generada por un computador, lejos de sus humildes comienzos sobre un hombre vestido en traje de goma  que destruye modelos de ciudades de madera. A través de casi siete décadas, Godzilla ha sufrido abundantes transformaciones y batallado un memorable abanico de rivales, el mejor de ellos se presenta a continuación
+
                         </p>
                     </div>
                 </div>
@@ -148,7 +149,7 @@
                     <div class="col-11 col-sm-10 col-md-9 col-lg-8 mx-auto">
                         <hr />
                         <h3 class="text-center fs-5 my-5">El origen</h3>
-                        <p>Godzilla fue creado en 1954 por Tomoyuki Tanaka para ilustrar el terror japones que se sintió después de los bombardeos  atómicos de Hiroshima y Nagasaki. El director quiso <em>simbolizar la venganza de la naturaleza</em>.</p>
+                        <p>Godzilla fue creado en 1954 por Tomoyuki Tanaka para <em>ilustrar el terror japonés<em> que se sintió después de los bombardeos  atómicos de Hiroshima y Nagasaki. El director quiso <em>simbolizar la venganza de la naturaleza</em>.</p>
                         <object data="svg/origin1.svg" type="image/svg+xml" class="w-100"></object>
                     </div>
                 </div>
