--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Godzilla: la evolución de un Monstruo">
 <meta property="og:description" content="El monstruo radiactivo aterriza nuevamente en nuestras pantallas, sesenta y ocho años después de su estreno en Japón">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/fernandarozas/infog-clase-01/main/Godzilla_page-0001%20(1).jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="Godzilla: la evolución de un Monstruo">
 <meta property="twitter:description" content="El monstruo radiactivo aterriza nuevamente en nuestras pantallas, sesenta y ocho años después de su estreno en Japón">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="twitter:image" content="https://raw.githubusercontent.com/fernandarozas/infog-clase-01/main/Godzilla_page-0001%20(1).jpg">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Ingeniería Inversa</title>
