--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="col-11 col-sm-10 col-md-9 col-lg-8 mx-auto">
                         <hr />
                         <h3 class="text-center fs-5 my-5">El origen</h3>
-                        <p>Godzilla fue creado en 1954 por Tomoyuki Tanaka para <em>ilustrar el terror japonés<em> que se sintió después de los bombardeos  atómicos de Hiroshima y Nagasaki. El director quiso <em>simbolizar la venganza de la naturaleza</em>.</p>
+                        <p>Godzilla fue creado en 1954 por Tomoyuki Tanaka para <em>ilustrar el terror japonés</em> que se sintió después de los bombardeos  atómicos de Hiroshima y Nagasaki. El director quiso representar la represalia de la naturaleza. </p>
                         <object data="svg/origin1.svg" type="image/svg+xml" class="w-100"></object>
                     </div>
                 </div>
